--- a/web_app/static/partials/main.html
+++ b/web_app/static/partials/main.html
@@ -2,7 +2,7 @@
    <br>
    <br>
    <div class="d-flex justify-content-center align-items-center container-fluid bg-1">
-      <h4>What would you like to do today?</h4>
+      <h4>Main Page</h4>
       <br>
    </div>
    <br>
