--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -18,7 +18,7 @@
                <div class="container">
                   <div class="navbar-header">
                      <a class="navbar-brand" href="">
-                     <img src="/static/images/alt_site.png" alt="logo">
+                     <img src="/static/images/alt_site.png" alt="logo" height=50 width=50>
                      </a>
                   </div>
                   <ul class="navbar-nav navbar-pills nav-fill">
